--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ section.header:after {
 	background-size: cover;
 	height: 90px;
 	z-index: 90;
-	background-color: #340538;
+	background-color: #68686b;
 	border-top: 1px solid #f2f2f2;
 }
 section.header {
@@ -112,12 +112,12 @@ section.header {
 	z-index: 999999;
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-color: #340538;
+	background-color: #68686b;
 }
 .header_area {
 	z-index: 999999;
 	padding: 15px 0 0 0;
-	background-color: #340538;
+	background-color: #68686b;
 	position: fixed;
 	top: 0px;
 	height: 125px;
